# Stellar-DAO

./: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts  server.spec.ts  server.ts
apps/api/src/db/: schema.ts
apps/api/src/db/repositories/: asset-repository.ts  transaction-repository.spec.ts  transaction-repository.ts
apps/api/src/middleware/: rate-limit.ts
apps/api/src/routes/: assets.ts  bridge.ts  governance.ts  health.ts  transactions.ts
apps/api/src/soroban/: contracts-shim.ts  index.ts
apps/api/src/sse/: event-bus.ts  governance-bridge.ts  horizon-bridge.ts
apps/api/src/utils/: webhook-delivery.ts
apps/relayer/: .env.example  README.md  package.json
apps/relayer/src/: detector.ts  index.ts  relayer.spec.ts
apps/relayer/src/operator/: signer.ts
apps/relayer/src/sources/: ethereum.ts  polygon.ts  solana.ts  types.ts
apps/relayer/src/state/: event-queue.ts
apps/web/: .env.example  README.md  eslint.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/health/: route.ts
apps/web/app/assets/: page.tsx
apps/web/app/assets/[chain]/[address]/: page.tsx
apps/web/app/transactions/: page.tsx
apps/web/app/transactions/[id]/: page.tsx
apps/web/app/wrap/: page.tsx
apps/web/components/: mobile-nav.tsx
apps/web/components/atoms/: address-display.tsx  chain-badge.tsx  logo-mark.tsx
apps/web/components/dashboard/: assets-table.tsx  event-stream-panel.tsx  live-stats.tsx  transaction-feed.tsx  transactions-panel.tsx
apps/web/components/landing/: bridge-diagram.tsx
apps/web/components/nav/: top-nav.tsx  wallet-connect.tsx
apps/web/components/wrap/: wrap-panel.tsx
apps/web/lib/: horizon.ts  server-api.test.ts  server-api.ts  wallet.ts
contracts/: Cargo.toml  README.md
contracts/bridge/: Cargo.toml  README.md
contracts/bridge/src/: lib.rs  storage.rs  test.rs  verification.rs
contracts/factory/: Cargo.toml  README.md
contracts/factory/src/: error.rs  lib.rs  registry.rs  test.rs
contracts/governance-token/: Cargo.toml  README.md
contracts/governance-token/src/: error.rs  lib.rs
contracts/wrapper-token/: Cargo.toml  README.md
contracts/wrapper-token/src/: error.rs  lib.rs  metadata.rs  test.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md  soroban-testutils-issue.md
scripts/: deploy.ts  generate-bindings.ts  generate-changelog.sh
