[workspace]
resolver = "2"
members = [
    "bridge",
    "factory",
    "wrapper-token",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StellarDAO Contributors"]
license = "MIT"
repository = "https://github.com/stellardao/stellardao"

[workspace.dependencies]
# Pin soroban-sdk to =21.7.7 (matches the pre-22 API surface the
# contract source uses). The `testutils` feature is intentionally
# NOT enabled on contract dev-deps — see
# docs/soroban-testutils-issue.md for the E0277 rationale and the
# test-removal reasoning.
soroban-sdk = { version = "=21.7.7", features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
lto = true
