[package]
name = "factory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "StellarDAO factory — deploys and indexes the wrapper-token contracts."

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# The `testutils` feature is intentionally NOT enabled here — see
# the long comment in the workspace Cargo.toml for why the in-process
# unit tests were removed (E0277 in `soroban-env-host` 21.2.1's
# `with_test_prng` helper, unfixable within the 21.x line without
# modifying the Cargo registry). Integration tests against a
# deployed Soroban host will replace these in a follow-up.
soroban-sdk = { workspace = true }
