[package]
name = "wrapper-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "StellarDAO wrapper-token — capped-mint/burn ERC-20-style token that the bridge contract is authorised for."

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# The `testutils` feature is intentionally NOT enabled here — see
# the long comment in the workspace Cargo.toml for why the in-process
# unit tests were removed (E0277 in `soroban-env-host` 21.2.1's
# `with_test_prng` helper, unfixable within the 21.x line without
# modifying the Cargo registry). Integration tests against a
# deployed Soroban host will replace these in a follow-up.
soroban-sdk = { workspace = true }
